# repo-to-text

./: .cursorrules  .gitignore  .repo-to-text-settings.yaml  CLAUDE.md  DOCKER.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  repo_structure.txt  requirements.txt  setup.py
.cursor/rules/: index.mdc
.github/workflows/: python-publish.yml  tests.yml
examples/: example_repo-to-text_2024-06-09-08-06-31-UTC.txt  example_repo_snapshot_2024-06-08-09-56-58-UTC.txt  example_repo_snapshot_2024-06-08-10-30-33-UTC.txt  example_repo_snapshot_2024-06-08-11-35-28-UTC.txt
repo_to_text/: __init__.py  main.py
repo_to_text/cli/: __init__.py  cli.py
repo_to_text/core/: __init__.py  core.py
repo_to_text/utils/: __init__.py  utils.py
tests/: test_cli.py  test_core.py  test_main.py  test_utils.py
